ubuntu-release-upgrader (1:20.04.25) UNRELEASED; urgency=medium

  * DistUpgrade/DistUpgradeQuirks.py: Add a check for ROS packages being
    installed and warn that upgrades with them installed are not likely to
    work. Thanks to Kyle Fazzari for the patch. (LP: #1611737)

 -- Brian Murray <brian@ubuntu.com>  Wed, 26 Aug 2020 08:29:48 -0700

ubuntu-release-upgrader (1:20.04.24) focal; urgency=medium

  * DistUpgrade/DistUpgradeCache.py: Ensure that the linux metapackage is
    never removed during a distribution upgrade. (LP: #1889449)

 -- Brian Murray <brian@ubuntu.com>  Mon, 03 Aug 2020 09:26:16 -0700

ubuntu-release-upgrader (1:20.04.23) focal; urgency=medium

  * data/DistUpgrade.cfg: remove xscreensaver from the PostUpgradeRemove rule
    for ubuntu-desktop as it is no longer necessary. (LP: #1875107)

 -- Brian Murray <brian@ubuntu.com>  Mon, 20 Jul 2020 17:23:48 -0700

ubuntu-release-upgrader (1:20.04.22) focal; urgency=medium

  * DistUpgrade/DistUpgradeController.py: set a default value for devRelease
    all the time. (LP: #1882069)
  * DistUpgrade/DistUpgradeQuirks.py: Update the quirk for handling the
    transition from python-minimal to python2-minimal so that it runs during a
    prepare stage and an install stage. Thanks to Lukas Märdian for the fix.
    (LP: #1875523)

 -- Brian Murray <brian@ubuntu.com>  Fri, 17 Jul 2020 13:56:54 -0700

ubuntu-release-upgrader (1:20.04.21) focal; urgency=medium

  * debian/91-release-upgrade: make it work in dash. (LP: #1873545)

 -- Brian Murray <brian@ubuntu.com>  Mon, 06 Jul 2020 08:42:50 -0700

ubuntu-release-upgrader (1:20.04.20) focal; urgency=medium

  * debian/91-release-upgrade: exit 0 if run as a non-root user.
    (LP: #1873545)
  * Only pass the package name to apport in the event that there is a dpkg
    error during a distribution upgrade. (LP: #1884148)

 -- Brian Murray <brian@ubuntu.com>  Wed, 24 Jun 2020 15:37:45 -0700

ubuntu-release-upgrader (1:20.04.19) focal; urgency=medium
