@@ -3,6 +3,8 @@ ubuntu-release-upgrader (1:20.04.25) UNRELEASED; urgency=medium
   * DistUpgrade/DistUpgradeQuirks.py: Add a check for ROS packages being
     installed and warn that upgrades with them installed are not likely to
     work. Thanks to Kyle Fazzari for the patch. (LP: #1611737)
+  * DistUpgrade/DistUpgradeController.py: do what the comment says and really
+    back up /etc/apt/sources.list first. (LP: #1888916)
 
  -- Brian Murray <brian@ubuntu.com>  Wed, 26 Aug 2020 08:29:48 -0700
 
